update core layout

--- a/index.html
+++ b/index.html
@@ -6,9 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css\styles.css">
-</head>
+</head> 
 
 <body>
+
+    <!-- Judul Website -->
+    <header>
+        <h1>Kalkulator BMI</h1>
+    </header>
     
+    <!-- Konten Wesite -->
+    <main> </main>
+
+    <!-- Judul Website -->
+    <footer>
+        <p>Made by Dinda</p>
+    </footer>
 </body>
 </html>
