--- a/index.html
+++ b/index.html
@@ -11,101 +11,73 @@
 <body>
 
     <!-- Judul Website -->
-    <header>
+    <div class="judul">
         <h1>Kalkulator BMI</h1>
-    </header>
-    
-    <!-- Konten Wesite -->
-    <main>
-        <section>
-        <!-- Main Article --> 
-        <article>
-            <p> Berat badan ideal adalah impian semua orang. Tidak hanya memiliki tubuh yang menunjang penampilan, berat badan juga menandakan kondisi tubuh yang sehat. Bagaimana denganmu? Yuk, hitung sekarang di Kalkulator BMI! </p>
-        </article>
 
-        <!-- Section Form Kalkulator -->
-        <form>
+        <!-- Form Kalkulator -->
+        <form class="kalkulator">
             <div>
-                <p>Jenis Kelamin</p>
+                <p class="jeniskelamin">Jenis Kelamin</p>
                 <input type="radio" id="pria" name="jeniskelamin" value="Pria">
-                <label for="pria">Pria</label><br>
+                <label for="pria">Pria</label>
                 <input type="radio" id="wanita" name="jeniskelamin" value="Wanita">
                 <label for="wanita">Wanita</label><br>
             </div>
 
             <div>
-                <label for="berat-badan-input">
-                    Berat Badan (kg):
-                </label>
-                <input id="berat-badan-input"/>
+                <label for="usia"> Usia (tahun)</label>
+                <input type="number" id="usia" min="0" step="1" value="0"/>
             </div>
 
             <div>
-                <label for="usia-input">
-                    Usia (tahun):
-                </label>
-                <input id="usia-input"/>
+                <label for="berat-badan">Berat (kg)</label>
+                <input type="number" id="berat-badan" min="0" step="0.01" value="0"/>
             </div>
 
             <div>
-                <label for="tinngi-badan-input">
-                    Tinggi Badan (cm):
-                </label>
-                <input id="tinngi-badan-input"/>
+                <label for="tingi-badan">Tinggi (cm)</label>
+                <input type="number" id="tingi-badan" min="0" step="0.01" value="0"/>
             </div>
 
             <div>
-                <button>Hitung BMI</button>
-                <button>Reset</button>
+                <button type="reset">reset</button>
+                <button type="submit">submit</button>
             </div>
         </form>
 
-        <!-- Second Article -->
-        <article>
-            <header>
-                <h3>Keunggulan Fitur</h3>
-            </header>
-
-            <p> 
-                1. Menghitung berat badan <br>
-                2. Menentukan Kategori berat badan ideal atau tidak <br>
-
-            </p>
-
-            <p>
-                Kalkulator ini hanya boleh digunakan oleh orang dewasa (wanita hamil atau menyusui tidak boleh mengandalkan pembacaan BMI ini) dan tidak ada tindakan yang harus diambil berdasarkan nilainya selain berkonsultasi dengan orang yang memenuhi syarat seperti dokter               
-            </p>
-
-            <p>
-                Kalkulator akan memberi Anda gambaran tentang perbandingan berat badan Anda dengan nilai umum. Indeks Massa Tubuh (atau BMI) dihitung sebagai berat badan Anda (dalam kilogram) dibagi dengan kuadrat tinggi badan Anda (dalam meter) atau BMI = Kg/M².  
-            </p> 
-        </article>
+    <!--  Hasil Kalkulator -->
+    <section class="hasil">
+        <h3>Hasil BMI Anda Adalah</h3>
+        <p id="bmi">0</p>
+        <p id="desc">N/A</p>
     </section>
 
-    <!-- Section Hasil Kalkulator -->
-    <section>
-        <div>
-            <header>
-                <h2>Hasil</h2>
-            </header>
-
-            <p>Berat Badan Lebih</p>
-
-            <div id="result-calculation">0</div>
-
-            <p id="info-result">Anda memiliki berat badan??</p>  
+    <section class="skala-bmi">
+        <div style="--color: var(--underweight)">
+            <h4>Kekurangan Berat Badan</h4>
+            <p>&lt; 18.5</p>
         </div>
 
-        <!-- Third Article -->
-        <article> 
-            <p>Lorem Ipsum Dolor Sit Amet Adipiscing...</p>
-        </article>
+        <div style="--color: var(--normal)">
+            <h4>Normal</h4>
+            <p>&lt; 18.5 - 24.9</p>
+        </div>
+
+        <div style="--color: var(--overweight)">
+            <h4>Kelebihan Berat Badan</h4>
+            <p>&lt; 25 - 29.9</p>
+        </div>
+
+        <div style="--color: var(--obese)">
+            <h4>Obesitas</h4>
+            <p>&lt; ≥ 30</p>
+        </div>
     </section>
-    </main>
 
     <!-- Footer Website -->
     <footer>
         <p>Made by Dinda</p>
     </footer>
+
 </body>
 </html>
