--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
     <!--  Hasil Kalkulator -->
     <section class="output">
-        <h3>Hasil BMI Anda Adalah</h3>
+        <h3>Hasil BMI anda adalah</h3>
         <p id="bmi">0</p>
         <p id="desc">N/A</p>
     </section>
