--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <form class="calculator">
             <div>
                 <p class="gender">Jenis Kelamin</p>
-                <input type="radio" id="pria" name="gender" value="Pria">
-                <label for="pria">Pria</label>
+                <input type="radio" id="laki" name="gender" value="Laki">
+                <label for="laki">Laki-Laki</label>
                 <input type="radio" id="wanita" name="gender" value="Wanita">
                 <label for="wanita">Wanita</label><br>
             </div>
